src/parser/snapshots/crochet__parser__tests__function_definition-3.snap
---
source: src/parser/mod.rs
expression: "parse(\"(a) => \\\"hello\\\"\")"
---
Program {
    body: [
        Expr {
            span: 0..14,
            expr: Lambda(
                Lambda {
                    span: 0..14,
                    args: [
                        Ident(
                            BindingIdent {
                                span: 1..2,
                                id: Ident {
                                    span: 1..2,
                                    name: "a",
                                },
                                type_ann: None,
                            },
                        ),
                    ],
                    body: Lit(
                        Str(
                            Str {
                                span: 7..14,
                                value: "hello",
                            },
                        ),
                    ),
                    is_async: false,
                },
            ),
        },
    ],
}
