src/parser/snapshots/crochet__parser__tests__if_else-2.snap
---
source: src/parser/mod.rs
expression: "parse(\"if a { 5 } else if b { 10 } else { 20 }\")"
---
Program {
    body: [
        Expr {
            span: 0..39,
            expr: IfElse(
                IfElse {
                    span: 0..39,
                    cond: Ident(
                        Ident {
                            span: 3..4,
                            name: "a",
                        },
                    ),
                    consequent: Lit(
                        Num(
                            Num {
                                span: 7..8,
                                value: "5",
                            },
                        ),
                    ),
                    alternate: Some(
                        IfElse(
                            IfElse {
                                span: 16..39,
                                cond: Ident(
                                    Ident {
                                        span: 19..20,
                                        name: "b",
                                    },
                                ),
                                consequent: Lit(
                                    Num(
                                        Num {
                                            span: 23..25,
                                            value: "10",
                                        },
                                    ),
                                ),
                                alternate: Some(
                                    Lit(
                                        Num(
                                            Num {
                                                span: 35..37,
                                                value: "20",
                                            },
                                        ),
                                    ),
                                ),
                            },
                        ),
                    ),
                },
            ),
        },
    ],
}
